Using same color of emphasis red. Highlighted sponsors' names.

--- a/pycon_project/static/2013/css/custom.css
+++ b/pycon_project/static/2013/css/custom.css
@@ -6,7 +6,7 @@ body {
 
 .nowcfp {
     font-weight: bold;
-    color: #e2543c;
+    color: #e3543b;
 }
 
 p, .content li {
@@ -49,6 +49,9 @@ p, .content li {
 .sponsor-list img {
     width: 100%;
     max-width: 250px;
+}
+.sponsor-list h3 {
+  color: #e3543b;
 }
 
 .account-bar {
