--- a/pycon_project/static/2013/css/custom.css
+++ b/pycon_project/static/2013/css/custom.css
@@ -9,6 +9,8 @@ body {
     color: #e3543b;
 }
 
+hr {border-top-color: #a8a8a8; border-bottom-color:#ffffff;}
+
 p, .content li {
     /* Bootstrap v2.0.1 Styles */
     margin: 0 0 9px;
