--- a/pycon_project/templates/_nav.html
+++ b/pycon_project/templates/_nav.html
@@ -34,15 +34,22 @@
                     <a href="{% url blog %}" id="link-blog">{% trans "Blog" %}</a>
                 </li>
             </ul>
+
             <form action="{% if not debug %}/2013{% endif %}/i18n/setlang/" method="post" class="navbar-form pull-right language_form">{% csrf_token %}
-                <span>Language&nbsp;&nbsp;</span>
                 <input name="next" type="hidden" value="{{ no_lang_path }}" />
-                <select class="span2" name="language">
-                {% for lang in LANGUAGES %}
-                    <option value="{{ lang.0 }}"{% ifequal request.LANGUAGE_CODE lang.0 %} selected="selected"{% endifequal %}>{{ lang.1 }}</option>
-                {% endfor %}
-                </select>
-                <input class="btn" type="submit" value="Go" />
+                <div class="control-group">
+                  <div class="controls">
+                    <div class="input-prepend input-append">
+                        <span class="add-on">&nbsp; {% trans "Language" %} &nbsp;</span>
+                        <select class="span2" name="language" style="margin-top: 0;">
+                        {% for lang in LANGUAGES %}
+                            <option value="{{ lang.0 }}"{% ifequal request.LANGUAGE_CODE lang.0 %} selected="selected"{% endifequal %}>{{ lang.1 }}</option>
+                        {% endfor %}
+                        </select>
+                        <input class="btn" type="submit" value="Go" />
+                    </div>
+                  </div>
+                </div>
             </form>
         </div>
     </div>
