Added responsive border radius of header for mobile screen candy.

--- a/pycon_project/static/2013/css/custom.css
+++ b/pycon_project/static/2013/css/custom.css
@@ -1,3 +1,10 @@
+@media (max-width: 767px) {
+  body header.header {
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+  }
+}
+
 body {
     background: url(../img/bg-repeat.jpg);
     font-family: '微軟正黑體',Arial,sans-serif;
