Padding-bottom makes brick look better on mobile.

--- a/pycon_project/static/2013/css/custom.css
+++ b/pycon_project/static/2013/css/custom.css
@@ -1,8 +1,11 @@
 @media (max-width: 767px) {
-  body header.header {
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
-  }
+    body header.header {
+        border-bottom-right-radius: 5px;
+        border-bottom-left-radius: 5px;
+    }
+    .brick {
+        padding-bottom: 1px;
+    }
 }
 
 body {
