--- a/pycon_project/static/2013/css/custom.css
+++ b/pycon_project/static/2013/css/custom.css
@@ -19,7 +19,10 @@ body {
     color: #e3543b;
 }
 
-hr {border-top-color: #a8a8a8; border-bottom-color:#ffffff;}
+hr {
+    border-top-color: #a8a8a8;
+    border-bottom-color:#ffffff;
+}
 
 p, .content li {
     /* Bootstrap v2.0.1 Styles */
@@ -63,7 +66,7 @@ p, .content li {
     max-width: 250px;
 }
 .sponsor-list h3 {
-  color: #e3543b;
+    color: #e3543b;
 }
 
 .account-bar {
@@ -160,7 +163,7 @@ header {
 }
 
 .blog-post div.teaser {
-  word-wrap:break-word;
+    word-wrap:break-word;
 }
 
 .blog-post {
