--- a/pycon_project/templates/_nav.html
+++ b/pycon_project/templates/_nav.html
@@ -53,6 +53,9 @@
                     <a class="btn btn-small btn-danger" href="https://plus.google.com/101932655972746759016/" target="_blank">
                         <i class="icon-google-plus"></i>
                     </a>
+                    <a class="btn btn-small btn-plurk" href="http://www.plurk.com/pycontw" target="_blank">
+                        P
+                    </a>
                 </div>
             </div>
 
