Add title for each social link

--- a/pycon_project/templates/_nav.html
+++ b/pycon_project/templates/_nav.html
@@ -44,16 +44,16 @@
 
             <div class="pull-right social-buttons">
                 <div class="btn-group">
-                    <a class="btn btn-small btn-primary" href="http://www.facebook.com/pycontw" target="_blank">
+                    <a class="btn btn-small btn-primary" href="http://www.facebook.com/pycontw" target="_blank" title="PyCon Taiwan on Facebook">
                         <i class="icon-facebook"></i>
                     </a>
-                    <a class="btn btn-small btn-info" href="http://twitter.com/pycontw" target="_blank">
+                    <a class="btn btn-small btn-info" href="http://twitter.com/pycontw" target="_blank" title="PyCon Taiwan on Twitter">
                         <i class="icon-twitter"></i>
                     </a>
-                    <a class="btn btn-small btn-danger" href="https://plus.google.com/101932655972746759016/" target="_blank">
+                    <a class="btn btn-small btn-danger" href="https://plus.google.com/101932655972746759016/" target="_blank" title="PyCon Taiwan on Google+">
                         <i class="icon-google-plus"></i>
                     </a>
-                    <a class="btn btn-small btn-plurk" href="http://www.plurk.com/pycontw" target="_blank">
+                    <a class="btn btn-small btn-plurk" href="http://www.plurk.com/pycontw" target="_blank" title="PyCon Taiwan on Plurk">
                         P
                     </a>
                 </div>
