Add Pinkoi logo to homepage

--- a/pycon_project/templates/_homepage_sponsor_logos.html
+++ b/pycon_project/templates/_homepage_sponsor_logos.html
@@ -2,4 +2,5 @@
 <a href="http://www.zillians.com/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}/img/zillians.png" alt=""></a>
 <a href="http://www.openfoundry.org/" target="_blank"><img style="max-height: 65px;" src="{{ STATIC_URL }}/img/OSSF_project_logo.png" alt=""></a>
 <a href="http://www.storysensecomputing.com/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}/img/storysense.png" alt=""></a>
+<a href="http://www.pinkoi.com/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}/img/pinkoi.png" alt=""></a>
 <a href="http://yowureport.com/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}/img/yowu-1.jpeg" alt=""></a>
