Enlarge introduction font size in Chinese version (to better align with sponsor block)

--- a/pycon_project/static/2013/css/custom.css
+++ b/pycon_project/static/2013/css/custom.css
@@ -126,6 +126,11 @@ header {
     margin-bottom: 40px;
 }
 
+#pycon_intro > .intro-zh > p {
+    font-size: 15px;
+    line-height: 1.6;
+}
+
 .nav {
     font-size: 18px;
 }
