--- a/pycon_project/templates/homepage.html
+++ b/pycon_project/templates/homepage.html
@@ -32,7 +32,7 @@
                     </a>
                 </div>
                 <img src="{{ STATIC_URL }}img/aboutpycon.jpg" alt="">
-                <div id="pycon_intro">{% box "homepage_main" %}</div>
+                <div id="pycon_intro" class='{%trans "intro-en" %}'>{% box "homepage_main" %}</div>
                 <img src="{{ STATIC_URL }}img/gallery.jpg" alt="">
             </div>
             <div class="span6 brick">
