--- a/pycon_project/static/2013/css/custom.css
+++ b/pycon_project/static/2013/css/custom.css
@@ -31,8 +31,8 @@ p, .content li {
     /* Bootstrap v2.0.1 Styles */
     margin: 0 0 9px;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 13px;
-    line-height: 18px;
+    font-size: 15px;
+    line-height: 2;
 }
 
 #body {
@@ -105,10 +105,23 @@ a.boxes-edit-link {
     display: none;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4, h5 {
     margin: 20px 0px 5px 0px;
     padding-bottom: 10px;
     font-family: '微軟正黑體', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    line-height: 3;
+}
+
+h3 {
+    font-size: 18px;
+}
+
+h4 {
+    font-size: 17px;
+}
+
+h5 {
+    font-size: 16px;
 }
 
 form ul {
