--- a/pycon_project/templates/_homepage_sponsor_logos.html
+++ b/pycon_project/templates/_homepage_sponsor_logos.html
@@ -1,7 +1,7 @@
-<a href="http://www.webfaction.com/" target="_blank"><img style="max-height: 30px;" src="{{ STATIC_URL }}img/wf.png" alt="WebFaction"></a>
-<a href="http://www.zillians.com/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}img/zillians.png" alt="Zillians"></a>
-<a href="http://www.openfoundry.org/" target="_blank"><img style="max-height: 65px;" src="{{ STATIC_URL }}img/OSSF_project_logo.png" alt="OSSF"></a>
-<a href="http://www.storysensecomputing.com/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}img/storysense.png" alt="StorySense"></a>
-<a href="http://www.pinkoi.com/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}img/pinkoi.png" alt="Pinkoi"></a>
-<a href="http://www.nchc.org.tw/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}img/nchc.png" alt="National Center for High-Performance Computing"></a>
-<a href="http://yowureport.com/" target="_blank"><img style="max-height: 45px;" src="{{ STATIC_URL }}img/yowu-2.jpeg" alt="YowuReport"></a>
+<a href="http://www.webfaction.com/" target="_blank"><img style="max-height: 30px;" src="{{ STATIC_URL }}img/sponsor_logos/wf.png" alt="WebFaction"></a>
+<a href="http://www.zillians.com/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}img/sponsor_logos/zillians.png" alt="Zillians"></a>
+<a href="http://www.openfoundry.org/" target="_blank"><img style="max-height: 65px;" src="{{ STATIC_URL }}img/sponsor_logos/OSSF_project_logo.png" alt="OSSF"></a>
+<a href="http://www.storysensecomputing.com/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}img/sponsor_logos/storysense.png" alt="StorySense"></a>
+<a href="http://www.pinkoi.com/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}img/sponsor_logos/pinkoi.png" alt="Pinkoi"></a>
+<a href="http://www.nchc.org.tw/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}img/sponsor_logos/nchc.png" alt="National Center for High-Performance Computing"></a>
+<a href="http://yowureport.com/" target="_blank"><img style="max-height: 45px;" src="{{ STATIC_URL }}img/sponsor_logos/yowu-2.jpeg" alt="YowuReport"></a>
