--- a/pycon_project/static/2013/css/custom.css
+++ b/pycon_project/static/2013/css/custom.css
@@ -115,6 +115,7 @@ h1, h2, h3, h4, h5 {
     padding-bottom: 10px;
     font-family: 'Microsoft JhengHei', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     line-height: 2;
+    color: #4a4a4a;
 }
 
 h3 {
