--- a/pycon_project/templates/base.html
+++ b/pycon_project/templates/base.html
@@ -114,6 +114,7 @@
         </script>
         <script src="{{ STATIC_URL }}js/base.js" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}js/bootstrap.js" type="text/javascript"></script>
+        {% block extra_js %}{% endblock %}
         <!--script src="{{ STATIC_URL }}uni_form/uni-form.jquery.js" type="text/javascript"></script-->
         <script type="text/javascript" src="{{ STATIC_URL }}markitup/jquery.markitup.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}markitup/sets/markdown-custom/set.js"></script>
